[package]
name = "idle-legends-greek-heroes-backend"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1", features = ["full"] }

[build]
jobs = 32

[dev-dependencies]
bevy_test = "0.0.1"

[profile.release]
lto = "fat"

[profile.dev.package."*"]
opt-level = 3

[profile.dev]
incremental = true
opt-level = 0
debug = true
lto = "off"
codegen-units = 256
